# CLVRQuantAi

./: .gitignore  .replit  CLVRQuantAI_AI_Tab_Architecture.md  Procfile  clvrquant_full_code_export.txt  clvrquantai_dump.sql  data_backup.sql  nixpacks.toml  package-lock.json  package.json  pyproject.toml  railway.json  replit.md  tsconfig.json
.agents/: agent_assets_metadata.toml
attached_assets/: 79390912572__BA2A82E7-3B2E-4223-87C8-0A1FE4A3418C_1772216336363.MOV  79450790139__1ABE43C2-231A-474D-AAC1-1B0AF3A054C9_1772815109010.MOV  79562836832__7E8E3452-7427-4C15-A097-51A0058B500C_1773935575119.MOV  Pasted--2B-continued-rest-of-email-template-builder-typescript_1776860602671.txt  Pasted--AI-Analyst-Quant-Engine-Troubleshooting-TODO-Diagnose-_1776275033716.txt  Pasted--AITab-jsx-CLVR-1774370726585_1774370726586.txt  Pasted--AUDIT-REQUEST-Full-Architecture-Map-of-the-AI-Tab-DO-N_1776289093028.txt  Pasted--CLVR-QUANT-AI-ENHANCED-TRADING-INTELLIGENCE-LAYER-1-MA_1774015168808.txt  Pasted--CLVRQuant-3-Fixes-Prompt-Paste-this-entire-block-into-_1773857822743.txt  Pasted--CLVRQuant-AI-Bot-Server-v2-Shared-Signal-Cache-Consist_1773317610072.txt  Pasted--CLVRQuant-AI-FastAPI-Backend-Cost-optimized-one-AI-cal_1773317626022.txt  Pasted--CLVRQuant-Full-System-Improvement-Prompt-Paste-this-en_1773830532389.txt  Pasted--CLVRQuantAI-Auto-Posting-Pipeline-Replit-Prompt-Draft-_1777181112646.txt  Pasted--CLVRQuantAI-Chart-AI-Frontend-Wires-the-existing-AI-17_1777411771810.txt  Pasted--CLVRQuantAI-Chart-AI-Resolution-Worker-Watches-open-pl_1777412115550.txt  (+85 more)
client/: index.html
(+125 files in other folders)
