[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "arch==7.2.0",
    "asyncpg==0.29.0",
    "fastapi==0.115.0",
    "httpx==0.27.2",
    "numpy>=1.26,<2.1",
    "pandas>=2.2,<2.3",
    "pydantic>=2.9,<3",
    "python-dotenv==1.0.1",
    "scipy>=1.13,<1.15",
    "uvicorn[standard]==0.30.6",
    "websockets==13.0.1",
]
